# Rationundo

./: .env.example  .gitignore  DEPLOY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  keepalive.yml  scrape.yml
app/: config.py  database.py  main.py  schemas.py
app/api/: htmx_routes.py  routes.py
app/models/: models.py
app/repositories/: __init__.py  shops.py
app/services/: shops.py
app/worker/: celery_app.py  scraper.py  tasks.py  time_utils.py
docs/: index.html
migrations/: env.py
migrations/versions/: 29bbdbd8d410_initial_tables.py  a1b2c3d4e5f6_add_shop_indexes.py  b2c3d4e5f6a7_add_pincode_latlong.py  c3d4e5f6a7b8_add_local_place.py  d4e5f6a7b8c9_add_fk_and_geo_indexes.py
scripts/: backfill_coords.py  backfill_local_place.py  discover_shops.py  fuzzy_match.py  geocode_and_relink.py  scrape_all.py  seed_pincodes.py  sync_to_supabase.py  verify.py
static/: app.js  manifest.json  style.css  sw.js
templates/: index.html
templates/partials/: _districts.html  _error.html  _feed_page.html  _results.html  _shop_card.html  _stats.html  _suggestions.html  _taluks.html
tests/: test_parser.py  test_shop_logic.py  test_time_utils.py
