[project]
name = "rationundo"
version = "0.1.0"
description = "Track ration shop stock delivery status for Kerala citizens"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "celery[redis]==5.4.0",
    "redis==5.1.1",
    "httpx==0.27.2",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "slowapi==0.1.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.4.4",
    "black==24.4.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "migrations"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
